--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,77 +6,57 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="201dp"
-        android:layout_height="0dp"
-        android:layout_marginTop="176dp"
-        android:layout_marginBottom="10dp"
-        app:layout_constraintBottom_toTopOf="@+id/weight"
+    <EditText
+        android:id="@+id/etKilos"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="115dp"
+        android:ems="10"
+        android:hint="Kilos (x.xx)"
+        android:inputType="numberDecimal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:srcCompat="@tools:sample/avatars" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/weight"
+        android:id="@+id/etEstatura"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="32dp"
+        android:layout_marginTop="19dp"
         android:ems="10"
-        android:inputType="numberDecimal"
-        android:hint="Kilos (Xx.x)"
-        app:layout_constraintBottom_toTopOf="@+id/height"
-        app:layout_constraintStart_toStartOf="@+id/imageView"
-        app:layout_constraintTop_toBottomOf="@+id/imageView"/>
-
-    <EditText
-        android:id="@+id/height"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBotton="26dp"
-        android:ems="10"
-        android:inputType="numberDecimal"
         android:hint="Estatura"
-        app:layout_constraintBottom_toTopOf="@+id/calcular"
-        app:layout_constraintStart_toStartOf="@+id/weight"
-        app:layout_constraintTop_toBottomOf="@+id/weight" />
+        android:inputType="numberDecimal"
+        app:layout_constraintStart_toStartOf="@+id/etKilos"
+        app:layout_constraintTop_toBottomOf="@+id/etKilos" />
 
     <Button
-        android:id="@+id/calcular"
+        android:id="@+id/btnCalcular"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBotton="50dp"
+        android:layout_marginTop="33dp"
         android:text="CALCULAR"
-        app:layout_constraintBottom_toTopOf="@+id/imc"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/height" />
+        app:layout_constraintTop_toBottomOf="@+id/etEstatura" />
 
     <TextView
-        android:id="@+id/imc"
-        android:layout_width="163dp"
-        android:layout_height="0dp"
-        android:layout_marginBotton="23dp"
+        android:id="@+id/tvIMC"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:text=""
-        app:layout_constraintBottom_toTopOf="@+id/range"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/calcular"  />
-
-    <TextView
-        android:id="@+id/range"
-        android:layout_width="173dp"
-        android:layout_height="0dp"
-        android:layout_marginBotton="59dp"
-
-        android:text=""
-
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imc"  />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.478" />
 
-
-
+    <TextView
+        android:id="@+id/tvRange"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="38dp"
+        android:text=""
+        app:layout_constraintStart_toStartOf="@+id/tvIMC"
+        app:layout_constraintTop_toBottomOf="@+id/tvIMC" />
 </androidx.constraintlayout.widget.ConstraintLayout>
