--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="115dp"
         android:ems="10"
-        android:hint="Kilos (x.xx)"
+        android:hint="Estatura (x.xx)"
         android:inputType="numberDecimal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -24,7 +24,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="19dp"
         android:ems="10"
-        android:hint="Estatura"
+        android:hint="Kilos"
         android:inputType="numberDecimal"
         app:layout_constraintStart_toStartOf="@+id/etKilos"
         app:layout_constraintTop_toBottomOf="@+id/etKilos" />
